[tool.poetry]
name = "pii-Scanner"
version = "0.1.7"  # incremented version number
description = "A package for scanning and managing Personally Identifiable Information (PII)."
authors = ["Ankit Gupta"]


[tool.poetry.dependencies]
python = "^3.10"  # specify your Python version
unstructured = "0.15.5"
openpyxl="3.1.5"
presidio-analyzer="2.2.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
